# codex-provider-proxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
crates/pid-resolver/: Cargo.toml
crates/pid-resolver/src/: lib.rs
crates/pid-resolver/src/platform/: linux.rs  mod.rs  windows.rs
crates/pid-resolver/tests/: resolves_peer_pid.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: config.rs  exchange_log.rs  log_capture.rs  main.rs  proxy.rs  rpc.rs  runtime.rs
crates/proxyctl/: Cargo.toml
crates/proxyctl/src/: lib.rs  log_prune.rs  main.rs  process_scan.rs
crates/proxyctl/tests/: log_prune_command.rs  process_scan_finds_child_by_cmdline_windows.rs  process_scan_finds_self.rs
crates/rpc-types/: Cargo.toml
crates/rpc-types/src/: lib.rs
