[package]
name = "codex-provider-proxyctl"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
codex-provider-proxy-rpc-types = { path = "../rpc-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
